Fix button line-height on mobile (close #90)

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1850,11 +1850,13 @@ p.small {
 .btn-large {
   font-size: 150%;
   height: 56px;
+  line-height: 56px;
   }
   
 .btn-medium {
   font-size: 110%;
   height: 46px;
+  line-height: 46px;
   }
   
 // First run
@@ -2148,11 +2150,13 @@ h3.rent-title {
 .btn-large {
   font-size: 120%;
   height: 46px;
+  line-height: 46px;
   }
   
 .btn-medium {
   font-size: 105%;
   height: 44px;
+  line-height: 44px;
   }
   
   
